# rust-api-sqlite

./: Cargo.toml  README.md
scripts/: create-db.sh  data.sql  schema.sql
src/: main.rs
src/handlers/: mod.rs  template.rs  user_handlers.rs
templates/: index.html
