[package]
name = "rust-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.0", features = ["full"] }
